# battleship

./: Makefile.am  Makefile.in  aqwe  config.in  configure  configure.ac
src/: Makefile.am  build.sh  configure.ac  mboi.h
src/AI/: Makefile  Makefile.am  Makefile.in  Makefile_old  ai.c  ai.h  ai_choose_direction.c  ai_clear_variants.c  ai_draw.c  ai_get_respond.c  ai_hit.c  ai_init.c  ai_rand_cell.c  ai_rand_matr.c  ai_set_field.c  ai_shoot.c  ai_test_main.c  ai_uninit.c  configure  configure.ac  shoot.c  test.sh
src/Client/: Makefile  Makefile.am  Makefile.in  client.c  client.h  client_send.c  client_send_attack.c  client_send_text.c  coords_atoi.c  coords_itoa.c  go_list.c  hit.c  map.c  parse_itoa.c  ras.c  round_ship.c  socket_init.c  with_ai.c
src/GUI/: De_Init.c  De_Move.c  Makefile  Makefile.am  Makefile.in  chat.c  chcell.c  endgui.c  gui.c  gui.h  hello.c  listing.c  login.c  main.c  mboi.h  menu.c  panel.c  ref.c  render.c  scroll.c
src/Server/: Makefile.am  Makefile.in  Server.c  for_fork.c  for_fork.h  game.c  main.c  nn_sg.c  server.c  server.h  thread_server.c
