AUTOMAKE_OPTIONS = foreign

AM_CFLAGS = -std=c99

lib_LTLIBRARIES = ../include/libAI.la
___include_libAI_la_SOURCES =		\
ai.c 								\
ai_choose_direction.c				\
ai_clear_variants.c					\
ai_get_respond.c					\
ai_hit.c							\
ai_init.c							\
ai_rand_cell.c						\
ai_rand_matr.c						\
ai_set_field.c						\
ai_shoot.c							\
ai_uninit.c	
