#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(ai.c)
AM_INIT_AUTOMAKE(ai.c, 1.0)
AM_CONFIG_HEADER(config.h:config.in)

# Checks for programs.
AC_PROG_CC

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(ai.h)

# Checks for libraries.
AM_DISABLE_SHARED
AM_PROG_LIBTOOL

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T

# Checks for library functions.

AC_OUTPUT(Makefile)
