AUTOMAKE_OPTIONS = foreign

AM_CFLAGS = -std=c99
AM_LDFLAGS = -L../include -lGUI -lAI -pthread

bin_PROGRAMS = Client
Client_SOURCES =		\
client.c				\
client_send_attack.c	\
client_send_text.c		\
coords_atoi.c			\
coords_itoa.c			\
go_list.c				\
hit.c					\
ras.c					\
socket_init.c			\
with_ai.c				\
map.c
