AUTOMAKE_OPTIONS = foreign

AM_CFLAGS = -std=c99
AM_LDFLAGS  = -lncurses

lib_LTLIBRARIES = ../include/libGUI.la
___include_libGUI_la_SOURCES =	\
De_Init.c			\
De_Move.c			\
chat.c				\
chcell.c			\
endgui.c			\
gui.c				\
hello.c				\
listing.c			\
login.c				\
ref.c				\
render.c			\
scroll.c			\
panel.c

